--- a/config/AppliedEnergistics2/AppliedEnergistics2.cfg
+++ b/config/AppliedEnergistics2/AppliedEnergistics2.cfg
@@ -307,8 +307,6 @@ orecamouflage {
 
     # OreDictionary Names: itemSilicon
     B:Silicon=true
-
-    # OreDictionary Names: gearWood
     B:WoodenGear=true
 }
 
@@ -317,9 +315,9 @@ powerratios {
     D:BuildCraft=5.0
     D:IC2=2.0
     D:Mekanism=0.2
-    D:RotaryCraft=8.884150675195451E-5
+    D:RotaryCraft=2.0
     D:ThermalExpansion=0.5
-    D:UsageMultiplier=1.0
+    D:UsageMultiplier=4.0
 }
 
 
