--- a/config/IguanaTinkerTweaks/MaterialDefaults.cfg
+++ b/config/IguanaTinkerTweaks/MaterialDefaults.cfg
@@ -110,18 +110,6 @@ materials {
         D:xpAmount=1.0
     }
 
-    bloodwood {
-        I:attack=3
-        S:color=gray
-        I:durability=280
-        D:handleModifier=1.840000033378601
-        I:harvestLevel=4
-        I:miningSpeed=700
-        I:reinforced=0
-        D:shoddy=0.0
-        D:xpAmount=1.0
-    }
-
     netherrack {
         I:attack=1
         S:color=dark_red
@@ -134,18 +122,6 @@ materials {
         D:xpAmount=1.0
     }
 
-    darkwood {
-        I:attack=1
-        S:color=gray
-        I:durability=105
-        D:handleModifier=1.5
-        I:harvestLevel=2
-        I:miningSpeed=400
-        I:reinforced=0
-        D:shoddy=0.0
-        D:xpAmount=1.0
-    }
-
     slime {
         I:attack=1
         S:color=green
@@ -153,18 +129,6 @@ materials {
         D:handleModifier=2.0
         I:harvestLevel=0
         I:miningSpeed=100
-        I:reinforced=0
-        D:shoddy=0.0
-        D:xpAmount=1.0
-    }
-
-    fusewood {
-        I:attack=2
-        S:color=gray
-        I:durability=200
-        D:handleModifier=1.659999966621399
-        I:harvestLevel=3
-        I:miningSpeed=600
         I:reinforced=0
         D:shoddy=0.0
         D:xpAmount=1.0
@@ -182,18 +146,6 @@ materials {
         D:xpAmount=1.0
     }
 
-    ghostwood {
-        I:attack=1
-        S:color=gray
-        I:durability=25
-        D:handleModifier=2.0
-        I:harvestLevel=1
-        I:miningSpeed=300
-        I:reinforced=0
-        D:shoddy=0.0
-        D:xpAmount=1.0
-    }
-
     cobalt {
         I:attack=4
         S:color=dark_aqua
@@ -202,18 +154,6 @@ materials {
         I:harvestLevel=8
         I:miningSpeed=1100
         I:reinforced=2
-        D:shoddy=0.0
-        D:xpAmount=1.0
-    }
-
-    "nether quartz" {
-        I:attack=3
-        S:color=gray
-        I:durability=81
-        D:handleModifier=0.699999988079071
-        I:harvestLevel=3
-        I:miningSpeed=550
-        I:reinforced=0
         D:shoddy=0.0
         D:xpAmount=1.0
     }
@@ -230,18 +170,6 @@ materials {
         D:xpAmount=1.0
     }
 
-    "refined glowstone" {
-        I:attack=5
-        S:color=gray
-        I:durability=240
-        D:handleModifier=1.75
-        I:harvestLevel=6
-        I:miningSpeed=1400
-        I:reinforced=0
-        D:shoddy=0.0
-        D:xpAmount=1.0
-    }
-
     manyullyn {
         I:attack=5
         S:color=dark_purple
@@ -249,18 +177,6 @@ materials {
         D:handleModifier=2.5
         I:harvestLevel=9
         I:miningSpeed=900
-        I:reinforced=0
-        D:shoddy=0.0
-        D:xpAmount=1.0
-    }
-
-    osmium {
-        I:attack=4
-        S:color=gray
-        I:durability=400
-        D:handleModifier=1.2999999523162842
-        I:harvestLevel=6
-        I:miningSpeed=1000
         I:reinforced=0
         D:shoddy=0.0
         D:xpAmount=1.0
@@ -278,18 +194,6 @@ materials {
         D:xpAmount=1.0
     }
 
-    pokefennium {
-        I:attack=2
-        S:color=gray
-        I:durability=800
-        D:handleModifier=3.0
-        I:harvestLevel=8
-        I:miningSpeed=850
-        I:reinforced=0
-        D:shoddy=0.0
-        D:xpAmount=1.0
-    }
-
     bronze {
         I:attack=3
         S:color=gold
@@ -298,18 +202,6 @@ materials {
         I:harvestLevel=4
         I:miningSpeed=650
         I:reinforced=1
-        D:shoddy=0.0
-        D:xpAmount=1.0
-    }
-
-    fairy {
-        I:attack=5
-        S:color=gray
-        I:durability=200
-        D:handleModifier=0.5
-        I:harvestLevel=7
-        I:miningSpeed=1050
-        I:reinforced=0
         D:shoddy=0.0
         D:xpAmount=1.0
     }
@@ -326,30 +218,6 @@ materials {
         D:xpAmount=1.0
     }
 
-    "certus quartz" {
-        I:attack=3
-        S:color=gray
-        I:durability=159
-        D:handleModifier=0.800000011920929
-        I:harvestLevel=3
-        I:miningSpeed=800
-        I:reinforced=0
-        D:shoddy=0.0
-        D:xpAmount=1.0
-    }
-
-    "ender amethyst" {
-        I:attack=5
-        S:color=gray
-        I:durability=1238
-        D:handleModifier=1.2000000476837158
-        I:harvestLevel=6
-        I:miningSpeed=1500
-        I:reinforced=0
-        D:shoddy=0.0
-        D:xpAmount=1.0
-    }
-
     steel {
         I:attack=3
         S:color=gray
@@ -362,18 +230,6 @@ materials {
         D:xpAmount=1.0
     }
 
-    manasteel {
-        I:attack=2
-        S:color=gray
-        I:durability=240
-        D:handleModifier=1.0
-        I:harvestLevel=6
-        I:miningSpeed=620
-        I:reinforced=0
-        D:shoddy=0.0
-        D:xpAmount=1.0
-    }
-
     blueslime {
         I:attack=1
         S:color=aqua
@@ -381,18 +237,6 @@ materials {
         D:handleModifier=1.5
         I:harvestLevel=0
         I:miningSpeed=150
-        I:reinforced=0
-        D:shoddy=0.0
-        D:xpAmount=1.0
-    }
-
-    terrasteel {
-        I:attack=3
-        S:color=gray
-        I:durability=1840
-        D:handleModifier=1.0
-        I:harvestLevel=5
-        I:miningSpeed=900
         I:reinforced=0
         D:shoddy=0.0
         D:xpAmount=1.0
@@ -410,30 +254,6 @@ materials {
         D:xpAmount=1.0
     }
 
-    elementium {
-        I:attack=2
-        S:color=gray
-        I:durability=576
-        D:handleModifier=1.0
-        I:harvestLevel=5
-        I:miningSpeed=620
-        I:reinforced=0
-        D:shoddy=0.0
-        D:xpAmount=1.0
-    }
-
-    desh {
-        I:attack=2
-        S:color=gray
-        I:durability=819
-        D:handleModifier=1.5
-        I:harvestLevel=5
-        I:miningSpeed=500
-        I:reinforced=0
-        D:shoddy=0.0
-        D:xpAmount=1.0
-    }
-
     thaumium {
         I:attack=3
         S:color=dark_purple
@@ -441,102 +261,6 @@ materials {
         D:handleModifier=1.1799999475479126
         I:harvestLevel=3
         I:miningSpeed=650
-        I:reinforced=0
-        D:shoddy=0.0
-        D:xpAmount=1.0
-    }
-
-    fiery {
-        I:attack=4
-        S:color=gray
-        I:durability=819
-        D:handleModifier=1.0
-        I:harvestLevel=6
-        I:miningSpeed=900
-        I:reinforced=0
-        D:shoddy=0.0
-        D:xpAmount=1.0
-    }
-
-    ironwood {
-        I:attack=2
-        S:color=gray
-        I:durability=410
-        D:handleModifier=1.0
-        I:harvestLevel=3
-        I:miningSpeed=650
-        I:reinforced=0
-        D:shoddy=0.0
-        D:xpAmount=1.0
-    }
-
-    knightmetal {
-        I:attack=3
-        S:color=gray
-        I:durability=410
-        D:handleModifier=1.0
-        I:harvestLevel=5
-        I:miningSpeed=800
-        I:reinforced=0
-        D:shoddy=0.0
-        D:xpAmount=1.0
-    }
-
-    steeleaf {
-        I:attack=3
-        S:color=gray
-        I:durability=105
-        D:handleModifier=1.0
-        I:harvestLevel=5
-        I:miningSpeed=800
-        I:reinforced=0
-        D:shoddy=0.0
-        D:xpAmount=1.0
-    }
-
-    amethyst {
-        I:attack=5
-        S:color=gray
-        I:durability=1238
-        D:handleModifier=1.100000023841858
-        I:harvestLevel=5
-        I:miningSpeed=800
-        I:reinforced=0
-        D:shoddy=0.0
-        D:xpAmount=1.0
-    }
-
-    peridot {
-        I:attack=3
-        S:color=gray
-        I:durability=410
-        D:handleModifier=1.0
-        I:harvestLevel=3
-        I:miningSpeed=875
-        I:reinforced=0
-        D:shoddy=0.0
-        D:xpAmount=1.0
-    }
-
-    ruby {
-        I:attack=4
-        S:color=gray
-        I:durability=410
-        D:handleModifier=1.0
-        I:harvestLevel=3
-        I:miningSpeed=800
-        I:reinforced=0
-        D:shoddy=0.0
-        D:xpAmount=1.0
-    }
-
-    sapphire {
-        I:attack=3
-        S:color=gray
-        I:durability=410
-        D:handleModifier=1.0
-        I:harvestLevel=3
-        I:miningSpeed=800
         I:reinforced=0
         D:shoddy=0.0
         D:xpAmount=1.0
@@ -554,170 +278,38 @@ materials {
         D:xpAmount=1.0
     }
 
-    jade {
+    unstableingot {
         I:attack=2
-        S:color=gray
-        I:durability=819
-        D:handleModifier=1.5
-        I:harvestLevel=5
-        I:miningSpeed=500
-        I:reinforced=0
-        D:shoddy=0.0
-        D:xpAmount=1.0
-    }
-
-    "dark steel" {
-        I:attack=2
-        S:color=gray
-        I:durability=1249
-        D:handleModifier=1.0
-        I:harvestLevel=7
-        I:miningSpeed=700
-        I:reinforced=0
-        D:shoddy=0.0
-        D:xpAmount=1.0
-    }
-
-    "void metal" {
-        I:attack=3
-        S:color=gray
-        I:durability=120
-        D:handleModifier=1.0
+        S:color=white
+        I:durability=80
+        D:handleModifier=0.6000000238418579
         I:harvestLevel=6
+        I:miningSpeed=700
+        I:reinforced=4
+        D:shoddy=0.0
+        D:xpAmount=1.0
+    }
+
+    bedrockium {
+        I:attack=4
+        S:color=black
+        I:durability=6000
+        D:handleModifier=1.75
+        I:harvestLevel=9
         I:miningSpeed=800
         I:reinforced=0
         D:shoddy=0.0
         D:xpAmount=1.0
     }
 
-    "red aurum" {
-        I:attack=2
-        S:color=gray
-        I:durability=200
-        D:handleModifier=1.2000000476837158
-        I:harvestLevel=6
-        I:miningSpeed=750
-        I:reinforced=0
-        D:shoddy=0.0
-        D:xpAmount=1.0
-    }
-
-    "hsla steel" {
+    magicwood {
         I:attack=0
-        S:color=gray
-        I:durability=51
-        D:handleModifier=-0.5
-        I:harvestLevel=2
-        I:miningSpeed=200
-        I:reinforced=0
-        D:shoddy=0.0
-        D:xpAmount=1.0
-    }
-
-    glue {
-        I:attack=2
-        S:color=gray
-        I:durability=16
+        S:color=yellow
+        I:durability=78
         D:handleModifier=1.0
-        I:harvestLevel=2
-        I:miningSpeed=100
+        I:harvestLevel=0
+        I:miningSpeed=150
         I:reinforced=0
-        D:shoddy=0.0
-        D:xpAmount=1.0
-    }
-
-    yellorium {
-        I:attack=3
-        S:color=light_purple
-        I:durability=480
-        D:handleModifier=1.0
-        I:harvestLevel=5
-        I:miningSpeed=300
-        I:reinforced=0
-        D:shoddy=0.0
-        D:xpAmount=1.0
-    }
-
-    cyanite {
-        I:attack=3
-        S:color=light_purple
-        I:durability=480
-        D:handleModifier=1.0
-        I:harvestLevel=5
-        I:miningSpeed=300
-        I:reinforced=0
-        D:shoddy=0.0
-        D:xpAmount=1.0
-    }
-
-    blutonium {
-        I:attack=3
-        S:color=light_purple
-        I:durability=480
-        D:handleModifier=1.0
-        I:harvestLevel=5
-        I:miningSpeed=300
-        I:reinforced=0
-        D:shoddy=0.0
-        D:xpAmount=1.0
-    }
-
-    ludicrite {
-        I:attack=3
-        S:color=light_purple
-        I:durability=480
-        D:handleModifier=1.0
-        I:harvestLevel=5
-        I:miningSpeed=300
-        I:reinforced=0
-        D:shoddy=0.0
-        D:xpAmount=1.0
-    }
-
-    bedrockium {
-        I:attack=0
-        S:color=light_purple
-        I:durability=64000
-        D:handleModifier=0.30000001192092896
-        I:harvestLevel=2
-        I:miningSpeed=100
-        I:reinforced=0
-        D:shoddy=0.0
-        D:xpAmount=1.0
-    }
-
-    enderium {
-        I:attack=16
-        S:color=light_purple
-        I:durability=880
-        D:handleModifier=2.0
-        I:harvestLevel=10
-        I:miningSpeed=2300
-        I:reinforced=1
-        D:shoddy=0.0
-        D:xpAmount=1.0
-    }
-
-    signalum {
-        I:attack=11
-        S:color=light_purple
-        I:durability=640
-        D:handleModifier=1.0
-        I:harvestLevel=12
-        I:miningSpeed=1300
-        I:reinforced=0
-        D:shoddy=0.0
-        D:xpAmount=1.0
-    }
-
-    lumium {
-        I:attack=9
-        S:color=light_purple
-        I:durability=1200
-        D:handleModifier=1.2000000476837158
-        I:harvestLevel=10
-        I:miningSpeed=300
-        I:reinforced=2
         D:shoddy=0.0
         D:xpAmount=1.0
     }
@@ -758,18 +350,6 @@ materials {
         D:xpAmount=1.0
     }
 
-    mithril {
-        I:attack=3
-        S:color=gray
-        I:durability=800
-        D:handleModifier=1.5
-        I:harvestLevel=6
-        I:miningSpeed=900
-        I:reinforced=0
-        D:shoddy=0.0
-        D:xpAmount=1.0
-    }
-
     silver {
         I:attack=3
         S:color=aqua
@@ -777,54 +357,6 @@ materials {
         D:handleModifier=1.2999999523162842
         I:harvestLevel=3
         I:miningSpeed=1200
-        I:reinforced=0
-        D:shoddy=0.0
-        D:xpAmount=1.0
-    }
-
-    titanium {
-        I:attack=2
-        S:color=gray
-        I:durability=520
-        D:handleModifier=1.5
-        I:harvestLevel=6
-        I:miningSpeed=1500
-        I:reinforced=2
-        D:shoddy=0.0
-        D:xpAmount=1.0
-    }
-
-    unstableingot {
-        I:attack=2
-        S:color=white
-        I:durability=80
-        D:handleModifier=0.6000000238418579
-        I:harvestLevel=6
-        I:miningSpeed=700
-        I:reinforced=4
-        D:shoddy=0.0
-        D:xpAmount=1.0
-    }
-
-    magicwood {
-        I:attack=0
-        S:color=yellow
-        I:durability=78
-        D:handleModifier=1.0
-        I:harvestLevel=0
-        I:miningSpeed=150
-        I:reinforced=0
-        D:shoddy=0.0
-        D:xpAmount=1.0
-    }
-
-    onion {
-        I:attack=6
-        S:color=light_purple
-        I:durability=8
-        D:handleModifier=0.30000001192092896
-        I:harvestLevel=2
-        I:miningSpeed=90
         I:reinforced=0
         D:shoddy=0.0
         D:xpAmount=1.0
