--- a/config/ZombieAwareness/Features.cfg
+++ b/config/ZombieAwareness/Features.cfg
@@ -5,16 +5,16 @@
     B:awareness_Light=true
 
     # Spawn scent/blood sense sources for monsters to track
-    B:awareness_Scent=false
+    B:awareness_Scent=true
 
     # Spawn sound sense sources for monsters to track
-    B:awareness_Sound=false
+    B:awareness_Sound=true
 
     # Spawn extra zombies in caves where other zombies already are if dark and away from player until Spawning.extraSpawningMaxCount is reached
-    B:extraSpawningCave=false
+    B:extraSpawningCave=true
 
     # Spawn extra zombies randomly on the surface at night if dark and away from player until Spawning.extraSpawningMaxCount is reached
-    B:extraSpawningSurface=false
+    B:extraSpawningSurface=true
 
     # Pistons cause sound sense sources attracting monsters
     B:noisyPistons=true
@@ -26,10 +26,10 @@
     B:wanderingHordes=true
 
     # MC/Forge default is 0.05, this overrides that default, set to -1 to cause no override then restore forges default in their config
-    D:zombieBabyChance=0.05
+    D:zombieBabyChance=0.0
 
     # MC/Forge default is 0.1, this overrides that default, set to -1 to cause no override then restore forges default in their config
-    D:zombieSummonHelpBaseChance=0.1
+    D:zombieSummonHelpBaseChance=0.0
 }
 
 
