--- a/config/ZombieAwareness/General.cfg
+++ b/config/ZombieAwareness/General.cfg
@@ -4,7 +4,7 @@
     # Prevent non zombies from being attracted to light
     B:awareness_Light_OnlyZombies=true
     B:client_debugRenderSounds=false
-    B:client_renderBlood=true
+    B:client_renderBlood=false
     B:debugConsole=false
     B:debugConsoleOmnipotent=false
     B:debugConsoleSpawns=false
@@ -39,10 +39,10 @@
     I:soundStrength=60
 
     # how frequently the mod iterates all entities, effects rates, less is more frequent [performance sensitive]
-    I:tickRateAILoop=5
+    I:tickRateAILoop=10
 
     # how frequently the mod iterates all players, effects rates, less is more frequent
-    I:tickRatePlayerLoop=1
+    I:tickRatePlayerLoop=5
 
     # currently unused
     I:zombieRandSpeedBoost=5
