--- a/config/headcrumbs.cfg
+++ b/config/headcrumbs.cfg
@@ -268,27 +268,21 @@ heads {
         MidnightEnforcer
      >
     S:others <
-        ez
-        saukawolf
-        Fullapple1991
-        Kaisacles
-        Cindric
-        wiiv
-        deadmau5
-        muted79
-        DrummingFish
-        Kyrinon
-        vasili02
-        Jeb_Jeb
-        KingPurpleRaptor
-        DylanGK
-        sadris
-		Haggle1996
-		SentinalH
-		hotrodnate
-		shiva_chirr
-		Solego
-		HappyHalfling
+        Haggle1996
+        SentinalH
+        hotrodnate
+        shiva_chirr
+        Solego
+        HappyHalfling
+        DorinnB
+        lordicon
+        Dave_128
+        Melkin21
+        Zolingoto
+        Pterodactlol
+        Fluffycloud42
+        Demosthenexx
+        brokescience
      >
     S:technic <
         GenPage
@@ -307,6 +301,7 @@ heads {
         Nerdcubed
         Kleetho
         DanTDM
+        ashzification
         Runew0lf
         GiantWaffle
         Bacon_Donut
@@ -372,13 +367,13 @@ mob {
     I:"Maximum group size"=4
 
     # The minimum size of the group of mobs that will spawn at once
-    I:"Minimum group size"=4
+    I:"Minimum group size"=2
 
     # The change the mob will spawn. Base values: zombies, skeletons, spider, creepers = 100, endermen = 10, witches = 5
-    I:"Spawn probability"=50
+    I:"Spawn probability"=10
 
     # This prefix will be shown in front of celebrities names in-world. Meant to be used to differentiate celebrities from real players.
-    S:prefix=Angry 
+    S:prefix=Evil 
 }
 
 
