--- a/config/Mekanism.cfg
+++ b/config/Mekanism.cfg
@@ -44,6 +44,9 @@ general {
     I:LaserDiggingEnergy=100000
     I:LaserRange=64
     B:LogPackets=false
+    I:MaxFlamethrowerGas=24000
+    I:MaxJetpackGas=24000
+    I:MaxScubaGas=24000
     I:MinerSilkMultiplier=6
     I:ObsidianTNTBlastRadius=12
     I:ObsidianTNTDelay=100
