--- a/config/RandomThings.cfg
+++ b/config/RandomThings.cfg
@@ -37,7 +37,7 @@ items {
     B:MagneticForce=true
     B:OpSpectreKey=false
     B:SoundRecorder=true
-    B:SpectreArmor=true
+    B:SpectreArmor=false
     B:SpectreKey=true
     B:SpectreSword=true
     B:SpiritBinder=false
