--- a/config/AppliedEnergistics2/AppliedEnergistics2.cfg
+++ b/config/AppliedEnergistics2/AppliedEnergistics2.cfg
@@ -315,9 +315,9 @@ powerratios {
     D:BuildCraft=5.0
     D:IC2=2.0
     D:Mekanism=0.2
-    D:RotaryCraft=2.0
+    D:RotaryCraft=8.884150675195451E-4
     D:ThermalExpansion=0.5
-    D:UsageMultiplier=4.0
+    D:UsageMultiplier=1.0
 }
 
 
