--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -2154,6 +2154,7 @@ botania {
     B:manaBeacon.7=false
     B:manaBeacon.8=false
     B:manaBeacon.9=false
+    B:manaBomb=true
     B:manaDetector=false
     B:manaFlame=false
     B:manaGlass=false
@@ -5704,6 +5705,7 @@ gardentrees {
     B:thinlog.13236=false
     B:thinlog.13237=false
     B:thinlog.13238=false
+    B:thinlog.13239=false
     B:thinlog.13258=false
     B:thinlog.13259=false
     B:thinlog.13260=false
@@ -5855,6 +5857,7 @@ gardentrees {
     B:thinlog.5044=false
     B:thinlog.5045=false
     B:thinlog.5046=false
+    B:thinlog.5047=false
     B:thinlog.5066=false
     B:thinlog.5067=false
     B:thinlog.5068=false
@@ -6003,6 +6006,7 @@ gardentrees {
     B:thinlog.9140=false
     B:thinlog.9141=false
     B:thinlog.9142=false
+    B:thinlog.9143=false
     B:thinlog.9162=false
     B:thinlog.9163=false
     B:thinlog.9164=false
@@ -6061,6 +6065,7 @@ gardentrees {
     B:thinlog.9491=false
     B:thinlog.950=false
     B:thinlog.9507=false
+    B:thinlog.951=false
     B:thinlog.9540=false
     B:thinlog.9556=false
     B:thinlog.970=false
@@ -6157,6 +6162,7 @@ gardentrees {
     B:thinlogfence.13236=false
     B:thinlogfence.13237=false
     B:thinlogfence.13238=false
+    B:thinlogfence.13239=false
     B:thinlogfence.13258=false
     B:thinlogfence.13259=false
     B:thinlogfence.13260=false
@@ -6308,6 +6314,7 @@ gardentrees {
     B:thinlogfence.5044=false
     B:thinlogfence.5045=false
     B:thinlogfence.5046=false
+    B:thinlogfence.5047=false
     B:thinlogfence.5066=false
     B:thinlogfence.5067=false
     B:thinlogfence.5068=false
@@ -6456,6 +6463,7 @@ gardentrees {
     B:thinlogfence.9140=false
     B:thinlogfence.9141=false
     B:thinlogfence.9142=false
+    B:thinlogfence.9143=false
     B:thinlogfence.9162=false
     B:thinlogfence.9163=false
     B:thinlogfence.9164=false
@@ -6514,6 +6522,7 @@ gardentrees {
     B:thinlogfence.9491=false
     B:thinlogfence.950=false
     B:thinlogfence.9507=false
+    B:thinlogfence.951=false
     B:thinlogfence.9540=false
     B:thinlogfence.9556=false
     B:thinlogfence.970=false
