--- a/config/DCsAppleMilk.cfg
+++ b/config/DCsAppleMilk.cfg
@@ -151,7 +151,7 @@ setting {
     B:"Allow Clam Fertilizer"=true
 
     # Allow the WipeBox generate a paper infinitely.
-    B:"Allow Infinity Wipes"=true
+    B:"Allow Infinity Wipes"=false
 
     # Allow to add SlimeBall and Animalglue to Oredictionary.
     B:"Allow Slimeball OreDic"=true
@@ -186,7 +186,7 @@ setting {
     B:"No Weathering Container"=false
 
     # Set the generation probability of princess clam. Default value is 5.
-    I:"Princess Chance Value"=5
+    I:"Princess Chance Value"=0
 
     # Disable the damage caused by items of this MOD against player.
     # (For example, Yuzu Gatling, Silky Melon, etc.)
