--- a/config/RandomThings.cfg
+++ b/config/RandomThings.cfg
@@ -67,31 +67,31 @@ settings {
     I:BiomeChargeTime=20
 
     # Whether fog will turn black on a Bloodmoon to look better with the red sky
-    B:BloodMoonBlackFog=true
+    B:BloodMoonBlackFog=false
 
     # The chance of a bloodmoon happening (0=Never;1=Every night;0.05=5% of all nights)
-    D:BloodMoonChance=0.05
+    D:BloodMoonChance=1
 
     # Whether players are NOT allowed to sleep during a bloodmoon
     B:BloodMoonNoSleep=false
 
     # Whether light will be tinted red on a Bloodmoon
-    B:BloodMoonRedLight=true
+    B:BloodMoonRedLight=false
 
     # Whether the moon will be red on a Bloodmoon
     B:BloodMoonRedMoon=true
 
     # Whether the sky will turn red on a Bloodmoon
-    B:BloodMoonRedSky=true
+    B:BloodMoonRedSky=false
 
     # With which number should the default entity limit be multiplicated on a blood moon
     I:BloodMoonSpawnLimitMult=3
 
     # How close can enemys spawn next to the player on a bloodmoon in blocks? (Vanilla=24)
-    I:BloodMoonSpawnRange=10
+    I:BloodMoonSpawnRange=24
 
     # How much faster enemys spawn on a bloodmoon (0=Vanilla)
-    I:BloodMoonSpawnSpeed=3
+    I:BloodMoonSpawnSpeed=1
 
     # Whether players in the overworld should receive a message at the beginning of the bloodmoon
     B:BloodmoonMessage=false
