--- a/config/ZombieAwareness/Features.cfg
+++ b/config/ZombieAwareness/Features.cfg
@@ -5,13 +5,13 @@
     B:awareness_Light=true
 
     # Spawn scent/blood sense sources for monsters to track
-    B:awareness_Scent=true
+    B:awareness_Scent=false
 
     # Spawn sound sense sources for monsters to track
-    B:awareness_Sound=true
+    B:awareness_Sound=false
 
     # Spawn extra zombies in caves where other zombies already are if dark and away from player until Spawning.extraSpawningMaxCount is reached
-    B:extraSpawningCave=true
+    B:extraSpawningCave=false
 
     # Spawn extra zombies randomly on the surface at night if dark and away from player until Spawning.extraSpawningMaxCount is reached
     B:extraSpawningSurface=true
