--- a/config/forestry/backpacks.cfg
+++ b/config/forestry/backpacks.cfg
@@ -687,6 +687,16 @@ backpacks {
     adventurer {
         # Add itemStacks for the adventurer's backpack here in the format 'modid:name:meta'. For wildcard metadata the format is 'modid:name'.
         S:itemStacks <
+            stefinusguns:GalilAmmo
+            stefinusguns:M14Ammo
+            stefinusguns:M1911Ammo
+            stefinusguns:M60Ammo
+            stefinusguns:MP7Ammo
+            stefinusguns:MinimeAmmo
+            stefinusguns:P90 Clip
+            stefinusguns:RPGAmmo
+            stefinusguns:ScarHAmmo
+            stefinusguns:Shotgunshell
          >
 
         # Add ore dictionary names for the adventurer's backpack here in the format 'oreDictName'.
