--- a/config/harvestcraft.cfg
+++ b/config/harvestcraft.cfg
@@ -92,7 +92,7 @@ gardens {
     B:enablewatergardenGeneration=true
     I:gardenRarity=2
     I:gardendropAmount=3
-    B:gardensdropSeeds=true
+    B:gardensdropSeeds=false
     I:gardenspreadRate=100
 }
 
