--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -91,7 +91,7 @@ general {
     # Set this to false to always display all particles regardless of the "Particles" setting in the Vanilla options menu.
     B:vanillaParticleConfig.enabled=true
 
-    # Set this to false to disable checking and alerting when new Botania versions come out.
+    # Set this to false to disable checking and alerting when new Botania versions come out. (keywords for noobs: update notification message)
     B:versionChecking.enabled=false
 
     # Set this to true to use a static wand beam that shows every single position of the burst, similar to the way it used to work on old Botania versions. Warning: Disabled by default because it may be laggy.
@@ -120,6 +120,7 @@ general {
 potions {
     I:allure=95
     I:bloodthirst=94
+    I:clear=96
     I:emptiness=93
     I:featherFeet=92
     I:soulCross=91
