--- a/config/headcrumbs.cfg
+++ b/config/headcrumbs.cfg
@@ -357,7 +357,7 @@ mob {
      >
 
     # Setting this to false will cause Baarbra (or other mobs that VIPs mount) to no longer show up )=
-    B:"Disable Baarbra"=true
+    B:"Disable Baarbra"=false
 
     # Setting this to false will disable special drops/weapons for certain celebrities. Existing mobs will still hold the weapons they spawned with.
     B:"Enable VIP drops"=true
